--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ keyboards/__pycache__
 middlewares/__pycache__
 
 .env
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
