--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,37 @@ aiohttp==3.8.6
 aiosignal==1.3.2
 async-timeout==4.0.3
 attrs==25.3.0
+awsebcli==3.23.2
 Babel==2.9.1
+blessed==1.20.0
+blinker==1.9.0
+botocore==1.38.3
+cement==2.10.14
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+Flask==3.1.0
 frozenlist==1.6.0
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jmespath==1.0.1
 magic-filter==1.0.12
+MarkupSafe==3.0.2
 multidict==6.4.3
+packaging==24.2
+pathspec==0.12.1
 propcache==0.3.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.3
+semantic-version==2.10.0
+six==1.17.0
+termcolor==2.5.0
+urllib3==1.26.20
+wcwidth==0.2.13
+Werkzeug==3.1.3
 yarl==1.20.0
